2008-10-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9498: Bug: EM "Check for extension updates" always warns about changes (thanks to Christian Kuhn)
	* Fixed bug #9575: use native filter_functions for validate and sanitize (thanks to Steffen Kamper)

2008-10-14  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #9501: Titles of content columns in classic page module doesn't take into account backend charset (thanx to Steffen Kamper and Vladimir Podkovanov)
	* Added feature #9520: add a scheme to support singletons with t3lib_div::makeInstance

2008-10-14  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #9400: enables to have specific HTTP status codes on a sys_domain record when doing a redirect (new field sys_domain.redirectHttpStatusCode)

2008-10-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9523: class.t3lib_htmlmail.php produces null headers in HTML messages

2008-10-13  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed issue #9533: Made substituteMarkerArrayCached not so strict. Still with type hinting, but also allowing the null (uninitialized var) to be passed (to prevent several older extensions from breaking).

2008-10-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #7970: htmlArea RTE: fontstyle and fontsize should not use deprecated font tag

2008-10-10  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9522: t3lib_BEfunc::BEenableFields generates invalid SQL
	* Fixed bug #9469: Failed to load magic database

2008-10-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9516: htmlARea RTE: Move link tags to head
	* Added feature #9521: htmlArea RTE: factor out some functions dealing with inline elements
	* Added feature #7875: Coloured text is created using font-tag instead of span in IE
	* Added feature #8847: Custom colors in TYPO3Color like old SelectColor extension

2008-10-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9490: htmlArea RTE: Opera 9.52 sometimes refuses to insert a node
