@@ -1,3 +1,7 @@
+2008-10-18  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Fixed bug #9480: Enhance debug information with SQL data (thanks to Francois Suter for the inspiration)
+
 2008-10-17  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed bug #9498: Bug: EM "Check for extension updates" always warns about changes (thanks to Christian Kuhn)
